fix: apply minor rewording and grammar corrections

--- a/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins.mdx
@@ -38,14 +38,14 @@ The most straightforward way to define content models and content model groups w
 
 ### Using Plugins
 
-And although we can get pretty far by simply defining content models and content model groups via the Admin Area, on the other hand, we can also do this within our application code, by registering one or more [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelPlugin.ts#L4) and [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) plugins. Once defined, content models and content model groups can be then used via the Admin Area in the same way as if they were created regularly (via the Content Model Editor).
+And although we can get pretty far by defining content models and content model groups via the Admin Area, on the other hand, we can also do this within our application code, by registering one or more [`ContentModelPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelPlugin.ts#L4) and [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) plugins. Once defined, content models and content model groups can be then used via the Admin Area in the same way as if they were created regularly, via the Content Model Editor.
 
-Some of the other benefits of this approach are:
+Some of the benefits of this approach are:
 
 - content models and content model groups get to be stored in version control
 - since everything is done via code, in some case we may receive additional flexibility
 - by default, defined content models and content model groups are available for all available locales
-- basically, only developers have the ability to perform changes
+- basically, only developers have the ability to perform changes on content models and content model groups
 
 In the following sections, we cover a couple of examples that show how to define content models and content model groups via plugins.
 
@@ -53,7 +53,7 @@ In the following sections, we cover a couple of examples that show how to define
 
 ### Basic Example
 
-In this example, we show how we can define a simple **Product** content model, that belongs to the **E-Commerce** content model group. Both plugins can be define in a single file, in our case, [`api/code/headlessCMS/src/plugins/models.ts`](#):
+In this example, we show how we can define a simple **Product** content model, that belongs to the **E-Commerce** content model group. Both plugins can be defined within a single file, in our case, [`api/code/headlessCMS/src/plugins/models.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/content-model-plugins/basic/api/code/headlessCMS/src/plugins/models.ts):
 
 ```ts title="api/code/headlessCMS/src/plugins/models.ts"
 import { ContentModelPlugin } from "@webiny/api-headless-cms/content/plugins/ContentModelPlugin";
@@ -122,7 +122,7 @@ Once registered, we should end up with the following two items in our Admin Area
 
 As shown in the example, the [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) receives a [`CmsContentModel`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L282) object upon instantiation. It lets us define all of the content model's properties, like its name, ID (`modelId`), a content model group to which it belongs to, and most importantly, all of the fields that it consists of.
 
-All of the fields of a single content model are defined via the [`fields`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L327) property, which is an array of [`CmsContentModelField`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L99) objects. Note that some of the properties that we need to define for each field are simple and straightforward, like for example `id`, `label`, `label`, `placeholderText`, and so on. On the other hand, properties like `type`, `renderer.name`, and `validation.name` contain values that actually reference other plugins that were already registered. In case an invalid reference was provided, an error will be thrown and you will have to make corrections.
+All of the fields of a single content model are defined via the [`fields`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L327) property, which is an array of [`CmsContentModelField`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/types.ts#L99) objects. Note that some of the properties that we need to define for each field are simple and straightforward, like for example `id`, `label`, `label`, and `placeholderText`. On the other hand, properties like `type`, `renderer.name`, and `validation.name` contain values that actually reference other registered plugins. In case an invalid reference was provided, an error will be thrown and you will have to make corrections.
 
 :::info
 
@@ -137,7 +137,7 @@ Finally, note that both the **Product** content model and the **E-Commerce** con
 
 ### Define a Content Model Only for a Specific Locale
 
-In this example, we show how we can content models and content model groups only for a specific locale, in our case, the `en-US`.
+In this example, we show how we can define content models and content model groups only for a specific locale, in our case, the `en-US`.
 
 ```ts title="api/code/headlessCMS/src/plugins/models.ts"
 import { ContentModelPlugin } from "@webiny/api-headless-cms/content/plugins/ContentModelPlugin";
@@ -192,7 +192,7 @@ If you're doing this and require additional assistance, feel free to contact us 
 
 Both `id` and `fieldId` fields represent unique IDs of the field. We can assign any string value to them, but, for easier maintenance, we suggest you use a [camelCase](https://en.wikipedia.org/wiki/Camel_case) version of the actual name of the field. So, if the name of the field was **Author Name**, then we'd use `authorName` as the `id` and `fieldId`.
 
-There is a difference in how these two IDs are used internally within Headless CMS' application code, but this is more important when a content model is defined regularly, via the [Content Model Editor](http://localhost:3000/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins#via-the-admin-area). In case of content models defined via plugins, we can simply use the same value for both fields.
+There is a difference in how these two IDs are used internally within Headless CMS' application code, but this is more important when a content model is defined regularly, via the [Content Model Editor](/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins#via-the-admin-area). In case where a content model is defined via a plugin, we can simply use the same value for both fields.
 
 #### What are the values that I can pass to the `icon` property of the [`ContentModelGroupPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/api-headless-cms/src/content/plugins/ContentModelGroupPlugin.ts#L4) plugin?
 
