feat: add moving-state-files from locale to s3 FAQ item

--- a/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
@@ -191,3 +191,30 @@ error: the current deployment has 1 resource(s) with pending operations:
 Different CI/CD providers offer different options when it comes to setting environment variables. For example, [GitHub Actions](https://github.com/features/actions) enable this via [repository secrets](https://docs.github.com/en/actions/reference/encrypted-secrets). On the other hand, if using [AWS CodeBuild](https://aws.amazon.com/codebuild/), you can use the [AWS CodePipeline](https://aws.amazon.com/codepipeline/) service.
 
 Make sure to read the relevant documentation for best practices around how to properly set environment variables in your CI/CD provider.
+
+#### Is it possible to move my locally stored state files into an Amazon S3 bucket and start using it as my backend?
+
+Yes, it can be done by taking the following steps.
+
+First, create a new Amazon S3 bucket. Do note that it has to be created in the same region where your Webiny project is deployed.
+
+Once the bucket has been created, assign its URI to the `WEBINY_PULUMI_BACKEND` environment variable, in your `.env` file. For example:
+
+```bash
+WEBINY_PULUMI_BACKEND=s3://my-project-state-files
+```
+
+Finally, copy all of the folders and files located in your project root `.pulumi` folder into the newly created bucket. Once copied, you should end up with paths similar to the following:
+
+```bash
+my-project-state-files/api/.pulumi/...
+my-project-state-files/apps/admin/.pulumi/...
+my-project-state-files/apps/website/.pulumi/...
+```
+
+In order to confirm everything works as expected, from your project root, simply run the [`webiny info`](/docs/key-topics/webiny-cli#yarn-webiny-info---env-env) command. If everything was done correctly, it should display the correct information (GraphQL API URL, Headless CMS GraphQL API URLs, ...).
+
+
+
+
+
