fix: minor reword

--- a/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
@@ -192,7 +192,7 @@ Different CI/CD providers offer different options when it comes to setting envir
 
 Make sure to read the relevant documentation for best practices around how to properly set environment variables in your CI/CD provider.
 
-#### Is it possible to move my locally stored state files into an Amazon S3 bucket and start using it as my backend?
+#### Is it possible to move my locally stored state files into an Amazon S3 bucket and continue using it as my backend?
 
 Yes, it can be done by taking the following steps.
 
@@ -213,8 +213,3 @@ my-project-state-files/apps/website/.pulumi/...
 ```
 
 In order to confirm everything works as expected, from your project root, simply run the [`webiny info`](/docs/key-topics/webiny-cli#yarn-webiny-info---env-env) command. If everything was done correctly, it should display the correct information (GraphQL API URL, Headless CMS GraphQL API URLs, ...).
-
-
-
-
-
