fix: add section about Pulumi secrets

--- a/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/key-topics/ci-cd/cloud-infrastructure-state-files.mdx
@@ -213,3 +213,20 @@ my-project-state-files/apps/website/.pulumi/...
 ```
 
 In order to confirm everything works as expected, from your project root, simply run the [`webiny info`](/docs/key-topics/webiny-cli#yarn-webiny-info---env-env) command. If everything was done correctly, it should display the correct information (GraphQL API URL, Headless CMS GraphQL API URLs, ...).
+
+#### Can state files contain secrets or passwords? How are these stored?
+
+If you're passing secrets or passwords to cloud infrastructure resources in your cloud infrastructure ([Pulumi](/docs/key-topics/deployment/iac-with-pulumi)) code, for example an API token from an external service, then it's recommended that you mark them as secret.
+
+The easiest way to do this would be to use the [pulumi.secret](https://www.pulumi.com/docs/reference/pkg/nodejs/pulumi/pulumi/#secret) method, for example:
+
+```ts
+pulumi.secret(process.env.MY_API_TOKEN)
+```
+
+With this approach, values will still end up in your state files, but they will be encoded, which means nobody will be able to actually read them.
+
+:::info
+Learn more about secrets in Pulumi's official [documentation page](https://www.pulumi.com/docs/intro/concepts/secrets/).
+:::
+
