fix: remove unnecessary "from"

--- a/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
@@ -114,7 +114,7 @@ As we can see, the `listPosts` query returned a total of three posts. On the oth
 
 ## FAQ
 
-#### What is the `context` object and from where are all of its properties coming from?
+#### What is the `context` object and where are all of its properties coming from?
 
 In the shown examples, you may have noticed we were using the `context` object in GraphQL resolver functions. This object contains multiple different properties, mainly being defined from different Webiny applications that were imported in the Headless CMS GraphQL API's [`api/code/headlessCMS/src/index.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/extend-graphql-api/custom-queries/api/code/headlessCMS/src/index.ts) entrypoint file.
 
