fix: correct sentence

--- a/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-applications/headless-cms/extend-graphql-api.mdx
@@ -70,7 +70,8 @@ export default [
                         CmsContentEntryMeta
                     ] = await cms.entries.listLatest(model, {
                         where: {
-                            // Retrieving the currently logged is as easy as calling the security.getIdentity method.
+                            // Retrieving the currently logged in user is as easy
+                            // as calling the `security.getIdentity` method.
                             createdBy: security.getIdentity().id
                         }
                     });
