--- a/docs/changelog/5.12.0.mdx
+++ b/docs/changelog/5.12.0.mdx
@@ -25,6 +25,9 @@ Please check the [Webiny 5.12.0 migration guide](/docs/how-to-guides/upgrade-web
 
 ## Headless CMS
 
-### Define Content Models and Content Model Groups via Plugins ([#1797](https://github.com/webiny/webiny-js/pull/1797))
+### Ability to Define Content Models and Content Model Groups via Plugins ([#1797](https://github.com/webiny/webiny-js/pull/1797))
 
-✍️
+In this release, we've introduced the ability to define content models and content model groups via plugins. This brings a couple of cool benefits, like having both stored in your version control, in some cases additional flexibility, and more.
+
+Be sure to check out the [Define Content Models via Plugins](/docs/how-to-guides/webiny-applications/headless-cms/content-model-plugins) guide to learn more.
+
