fix: add "can I skip versions" FAQ item

--- a/docs/how-to-guides/upgrade-webiny/overview.mdx
+++ b/docs/how-to-guides/upgrade-webiny/overview.mdx
@@ -7,8 +7,10 @@ description: Learn how to upgrade your Webiny project.
 ---
 
 :::tip What you’ll learn
+
 - what does it mean to upgrade Webiny
 - how to upgrade Webiny to a specific version
+
 :::
 
 ## 🔥 Precaution Measures
@@ -29,9 +31,7 @@ If you have any additional questions or concerns, please don't hesitate to send 
 
 ## How to Upgrade
 
-:::caution
-When planning an upgrade, always check if there's a dedicated article for your specific Webiny version. All the articles are located in the menu on the left. For example: `5.0.0-beta.4 to 5.0.0`. If you see the article that matches your versions, follow it. These dedicated articles contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
-:::
+When planning an upgrade, always check if there's a dedicated guide for your specific Webiny version. All the guides are located in the menu on the left, for example: [5.9.0 → 5.10.0](/docs/how-to-guides/upgrade-webiny/5.9.0-to-5.10.0). If you see the guide that matches your versions, follow it. It may contain additional steps to upgrade your Webiny project, as sometimes there are changes in project file organization, project configs, etc.
 
 If there's no dedicated article, upgrades are as easy as upgrading all the `@webiny/*` packages to the desired version.
 
@@ -51,6 +51,10 @@ The `yarn up` command updates all your `package.json` files in all workspaces ac
 Once that's done, you can deploy your project.
 
 ## FAQ
+
+**While upgrading, can I skip versions, for example from 5.5.0 to 5.10.0?**
+
+You should never skip versions as each upgrade can contain additional manual steps that need to be taken. The steps will always be listed in upgrade guides.
 
 **Once upgraded, do we need to re-deploy the Webiny project in order to see the changes?**
 
