fix: update link

--- a/docs/how-to-guides/upgrade-webiny/5.11.1-to-5.12.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.11.1-to-5.12.0.mdx
@@ -19,7 +19,7 @@ Before continuing, make sure to take the necessary precautions, listed in the [O
 :::
 
 :::info
-Make sure to check out the [5.12.0 changelog](/docs/changelog/5.12.0) to get familiar with all the changes introduced in this release.
+Make sure to check out the [5.12.0 changelog](/docs/changelog/v5.12.0) to get familiar with all the changes introduced in this release.
 :::
 
 ## 1. Upgrade Webiny Packages
