docs: fix small spelling and grammar issues

--- a/docs/key-topics/tools-libraries.mdx
+++ b/docs/key-topics/tools-libraries.mdx
@@ -72,17 +72,17 @@ To learn more about Pulumi, visit our [IaC with Pulumi](/docs/key-topics/deploym
 
 ## Backend Development
 
-For backend development or in most cases, development of HTTP APIs, Webiny almost exclusively relies on [GraphQL](https://graphql.org/) standard, and provides an easy way to create new schemas or expand existing ones, via plugins. Note that, behind the scenes, the [GraphQL Tools](https://www.graphql-tools.com/) library is what is being used to make it happen.
+For backend development or in most cases, development of HTTP APIs, Webiny almost exclusively relies on the [GraphQL](https://graphql.org/) standard, and provides an easy way to create new schemas or expand existing ones, via plugins. Note that, behind the scenes, the [GraphQL Tools](https://www.graphql-tools.com/) library is what is being used to make it happen.
 
 As far as databases are concerned, you are allowed to bring your own database clients and other related tools. But, by default, we do provide our own [database client](https://github.com/webiny/webiny-js/tree/next/packages/db) which you can use as well.
 
-With the primary database, default Webiny applications, like for example Page Builder and Headless CMS, also rely on [Elasticsearch](https://www.elastic.co/) - a distributed search and analytics engine. The [official client](https://www.elastic.co/guide/en/elasticsearch/client/javascript-api/current/index.html) is what we use for interacting with it, and we also provide a convenient way to include it in your code, using the [`@webiny/api-plugin-elastic-search-client`](https://github.com/webiny/webiny-js/tree/next/packages/api-plugin-elastic-search-client) package.
+Along with the primary database of default Webiny applications, for example Page Builder and Headless CMS, they also rely on [Elasticsearch](https://www.elastic.co/) - a distributed search and analytics engine. The [official client](https://www.elastic.co/guide/en/elasticsearch/client/javascript-api/current/index.html) is what we use for interacting with it, and we also provide a convenient way to include it in your code, using the [`@webiny/api-plugin-elastic-search-client`](https://github.com/webiny/webiny-js/tree/next/packages/api-plugin-elastic-search-client) package.
 
 :::info
 Read more about the cloud infrastructure resources that get deployed into your AWS account in our [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/introduction) key topics section.
 :::
 
-Moving on, when it comes to authentication and authorization, no particular open source libraries are being used. Webiny provides a couple of its own packages that deal with it.
+When it comes to authentication and authorization, no particular open source libraries are being used. Webiny provides a couple of its own packages that deal with it.
 
 For communicating with AWS services, you are, naturally, free to use the [AWS SDK](https://aws.amazon.com/sdk-for-javascript/).
 
