--- a/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
+++ b/docs/key-topics/webiny-applications/headless-cms/graphql-api.mdx
@@ -55,7 +55,7 @@ Skip to the [The GraphQL API URL Structure](/docs/key-topics/webiny-applications
 
 The manage GraphQL API is here for management purposes. In other words, it provides the necessary queries and mutations for managing your content models, groups, and entries. It is heavily utilized by the Headless CMS module in the Webiny Administration Area.
 
-Except for the fact that this GraphQL API type allows you to create new, and edit and publish existing content entries, another specific aspect of it is that it returns both published and unpublished content entries. This is intentional, because, as a content manager, you need to be able to access all of the data, not just published.
+Except for the fact that this GraphQL API type allows you to create, edit and publish existing content entries, another specific aspect of it is that it returns both published and unpublished content entries. This is intentional, because, as a content manager, you need to be able to access all of the data, not just published.
 
 #### Read
 
