--- a/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
+++ b/docs/webiny-overview/serverless-cms/apps/file-manager.mdx
@@ -18,7 +18,7 @@ File Manager is a powerful tool to manage all your digital assets, from document
 
 ### Asset organization
 
-All assets can be tagged with one or more tags. You can the filter files by one tag, or multiple tags at once. There is also a search bar, for input-based search. 
+All assets can be tagged with one or more tags. You can filter files by one tag, or multiple tags at once. There is also a search bar, for input-based search.
 
 The file File Manager React component also has props you can use to limit the user's selection. You can say "open File Manager, but only show images" and similarly. It provides a better UX to the user.
 
