--- a/docs/key-topics/ui-composer/creating-elements.mdx
+++ b/docs/key-topics/ui-composer/creating-elements.mdx
@@ -6,16 +6,15 @@ keywords: ["webiny", "ui", "composer", "react", "element"]
 description: Learn how to create custom elements to use with UI Composer
 ---
 
-import CenteredImage from "@components/CenteredImage";
-import firstButton from "./assets/firstButton.png";
-import secondButton from "./assets/secondButton.png";
-import devTools from "./assets/devTools.png";
-
 :::tip What you'll learn
 
 - how to create elements
 - how to implement various renderers
 
+:::
+
+:::note
+This article uses the original `@webiny/ui-composer` package to showcase the creation of a completely custom UI element, the same way _you_ would do it in your project.
 :::
 
 ## Overview
@@ -65,11 +64,11 @@ When instantiating an element, it always needs to have a unique ID. That's how o
 new HeadingElement("heading", { size: 2, text: "MyHeading" });
 ```
 
-When you add this element to a view (as described in the [Building Views](/docs/key-topics/ui-composer/building-views) article), it will render an `<h2>` element. Currently, this element only supports `h1` and `h2`. We'll get to that later.
+When you add this element to a view (as described in the [Building Views](/docs/key-topics/ui-composer/building-views) article), it will render an `<h2>` element. Currently, this element only supports `h1` and `h2`. We'll expand the rendering capabilities later in the article.
 
 ## Making Element Extendable
 
-To make your custom elements extendable via plugins, we need to call the plugins from the class constructor. And to expose a meaningful public API, we need to add some setters so that other developers can set new configuration.
+To make your custom elements extendable via plugins, we need to call the plugins from the class constructor. We also need to add some getter/setters so that other developers can modify your element instances. Exposing a public interface is important for other developers to be able to successfully interact with your elements.
 
 ```ts title="Apply Element Plugins" {7-22}
 class HeadingElement extends UIElement<HeadingElementConfig> {
@@ -110,7 +109,7 @@ class HeadingElement extends UIElement<HeadingElementConfig> {
 }
 ```
 
-Now anyone can hook into your element:
+Now anyone can hook into your element from the outside, using the `UIElementPlugin`.
 
 ```ts title="Hooking Into Any Element"
 import { UIElementPlugin } from "@webiny/ui-composer/UIElement";
@@ -122,5 +121,105 @@ new UIElementPlugin<HeadingElement>(HeadingElement, element => {
   if (element.id === "heading") {
     element.setSize(1);
   }
+});
+```
+
+---
+
+Up to this point, we were using the `render` method almost as if it's plain React. If it's your final implementation, and you don't need to have your renderers pluginable, you _can_ do it. The only downside is that external developers will _not_ be able to add new renderers to elements shipped in this manner.
+
+Let's look at how you can improve this element class to support pluginable renderers.
+
+## Enabling Support For Renderers
+
+In this example, we'll implement a default renderer, which supports `<h1>` and `<h2>`, and falls back to `<h2>` if it runs into an unsupported heading size.
+
+```tsx title="Defining a Renderer"
+import { UIRenderer, UIRenderParams } from "@webiny/ui-composer/ui/UIRenderer";
+
+// Extend `UIRenderer` class
+class HeadingElementRenderer extends UIRenderer<HeadingElement> {
+  private _heading = {
+    1: "h1",
+    2: "h2"
+  };
+
+  render({ element }: UIRenderParams<HeadingElement>): React.ReactNode {
+    // Fetch a component to render or fall back to `h2`
+    const Component = this._heading[element.getSize()] || "h2";
+
+    // Use the public interface of the element to get its text
+    return <Component>{element.getText()}</Component>;
+  }
+}
+```
+
+That's our renderer. Now we can use it in the `HeadingElement` class. This is what your element class should look like:
+
+```tsx title="Configuring Element Class to Use a Renderer" {5-6,30-36}
+class HeadingElement extends UIElement<HeadingElementConfig> {
+  constructor(id: string, config: HeadingElementConfig) {
+    super(id, config);
+
++   // Add renderer
++   this.addRenderer(new HeadingElementRenderer());
+
+    // Apply plugins of type `UIElementPlugin` registered for this particular class
+    this.applyPlugins(HeadingElement);
+  }
+
+  // Add size setter
+  setSize(size: number) {
+    this.config.size = size;
+  }
+
+  // Add text setter
+  setText(text: string) {
+    this.config.text = text;
+  }
+
+  getSize() {
+    return this.config.size;
+  }
+
+  getText() {
+    return this.config.text;
+  }
+
+- render({ element }: UIRenderParams<HeadingElement>): React.ReactNode {
+-   // Fetch a component to render or fall back to `h2`
+-   const Component = this._heading[element.getSize()] || "h2";
+-
+-   // Use the public interface of the element to get its text
+-   return <Component>{element.getText()}</Component>;
+- }
+}
+```
+
+As you can see, we removed the `render` method override to let the base `UIElement` class do its magic, and we registered a renderer instance in the constructor. Looking in the browser, the output is the same as before. But now we can add more renderers.
+
+## Adding a Custom Renderer Using a Plugin
+
+Let's add another renderer that will only handle `size: 3` elements:
+
+```tsx title="Adding a Custom Renderer"
+import { UIElementPlugin } from "@webiny/ui-composer/UIElement";
+import { UIRenderer, UIRenderParams } from "@webiny/ui-composer/ui/UIRenderer";
+
+// Create a renderer for `size: 3` headings
+class CustomElementRenderer extends UIRenderer<HeadingElement> {
+  // This method allows us to conditionally apply or skip the renderer
+  canRender(element: HeadingElement): boolean {
+    return element.getSize() === 3;
+  }
+
+  render({ element }: UIRenderParams<HeadingElement>): React.ReactNode {
+    return <h3>{element.getText()}</h3>;
+  }
+}
+
+// Hook into all `HeadingElement` instances and attach the new renderer
+new UIElementPlugin(HeadingElement, element => {
+  element.addRenderer(new CustomHeadingRenderer());
 });
 ```
